--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ a{
     flex-direction: column;
     font-size: 8rem;
     transition-duration: 1s;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 
 .text_menu{
@@ -131,7 +131,7 @@ a{
     flex: 1;
     text-align:right;
 }
-
+E
 .projects{
     background: black;
     flex: 1;
