Fix mob chrome mob menu

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ a{
 
 .wrap1_info{
     width: 0%;
-    height: 100vh;
+    height: 100%;
     /* overflow: hidden; */
     overflow: auto;
     transition-duration: 1s;
